<?xml version="1.0" encoding="UTF-8"?>
<!--
/* (c) 2023 Open Source Geospatial Foundation - all rights reserved
 * This code is licensed under the GPL 2.0 license, available at the root
 * application directory.
 */
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.geoserver.acl</groupId>
    <artifactId>artifacts</artifactId>
    <version>${revision}</version>
  </parent>
  <artifactId>gs-acl-testcontainer</artifactId>
  <packaging>jar</packaging>
  <name>acl-testcontainer</name>
  <properties>
    <java.version>17</java.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <scope>provided</scope>
    </dependency>
  </dependencies>
</project>
